--- a/draw-intersections.html
+++ b/draw-intersections.html
@@ -18,23 +18,26 @@
 		<button id="lineMode" class="active" data-mode="line"></button>
 		<button id="CircleCenterMode" data-mode="circle-center"></button>
 		<button id="CircleEdgeMode" data-mode="circle-edge"></button>
+        <button id="eraseMode" data-mode="erase"></button>
 	</nav>	
 	
 	<div id='frame'>	
 		
-		<svg id='nest' xmlns="http://www.w3.org/2000/svg" >
+		<svg id='nest' xmlns="http://www.w3.org/2000/svg"  data-scale='1'  data-top="0" data-left="0" data-width="1150" data-height="700" >
 			<g id='preview'></g>
             <g id='guidecircles'></g>
 			<g id='guidelines'></g>
 			<g id='intersection_points'></g>
+            
+       <!--  <circle class="follower" r="20" cx="200" cy="200" data-identifier="C18" style="stroke-width:1; fill:red"></circle>-->
 		</svg>
 		
 	</div>
-	<script src="js/objs.js" type="text/javascript"></script>
-	<script src="js/intersectionNode.js" type="text/javascript"></script> 
-	<script src="js/lineEquation.js" type="text/javascript"></script>
+	    <script src="js/objs.js" type="text/javascript"></script>
+	    <script src="js/intersectionNode.js" type="text/javascript"></script> 
+	    <script src="js/lineEquation.js" type="text/javascript"></script>
         <script src="js/lineIntersection.js" type="text/javascript"></script>
-	<script src="js/coordDictionary.js" type="text/javascript"></script>
+	    <script src="js/coordDictionary.js" type="text/javascript"></script>
         <script src="js/guideline.js" type="text/javascript"></script>
         <script src="js/circleDraw.js" type="text/javascript"></script>
         <script src="js/circleEquations.js" type="text/javascript"></script>
