Add Music Button

--- a/draw-intersections.html
+++ b/draw-intersections.html
@@ -19,6 +19,7 @@
 		<button id="CircleCenterMode" data-mode="circle-center"></button>
 		<button id="CircleEdgeMode" data-mode="circle-edge"></button>
         <button id="eraseMode" data-mode="erase"></button>
+        <button id="musical" data-mode="musical"></button>
 	</nav>	
 	
 	<div id='frame'>	
@@ -44,6 +45,7 @@
     <script src="js/circleDraw.js" type="text/javascript"></script>
     <script src="js/circleEquations.js" type="text/javascript"></script>
     <script src="js/grid.js" type="text/javascript"></script>
+    <script src="js/musical.js" type="text/javascript"></script>
   	<script src="js/draw.js" type="text/javascript"></script>
   	  
   	<script>
