--- a/draw-intersections.html
+++ b/draw-intersections.html
@@ -2,7 +2,7 @@
 <html><head>
   <meta charset="utf-8">
 
-  <title>SVG Test</title>
+  <title>Ruler and Compass Designer</title>
 
   <link rel="stylesheet" href="style.css?v=1.0">
   <script src="js/jquery-2.2.4.min.js" type="text/javascript"></script>
