--- a/draw-intersections.html
+++ b/draw-intersections.html
@@ -26,7 +26,9 @@
 	       </div>
 	       
 	      <div class='drawing'> 
-         		<button id="musical" data-mode="musical" title="(m) musical line"></button>
+                <button id="draw-straight" data-mode="draw-straight" title="(d) draw - straight"></button>
+                <button id="draw-curved" data-mode="draw-curved" title="(d) draw - curved"></button>
+                <button id="musical" data-mode="musical" title="(m) musical line"></button>
          </div>
  	</nav>
 	
