--- a/draw-intersections.html
+++ b/draw-intersections.html
@@ -45,15 +45,15 @@
 	</div>
 
     <script src="js/objs.js" type="text/javascript"></script>
-    <script src="js/intersectionNode.js" type="text/javascript"></script> 
-    <script src="js/lineEquation.js" type="text/javascript"></script>
-    <script src="js/lineIntersection.js" type="text/javascript"></script>
-    <script src="js/coordDictionary.js" type="text/javascript"></script>
-    <script src="js/guideline.js" type="text/javascript"></script>
-    <script src="js/circleDraw.js" type="text/javascript"></script>
-    <script src="js/circleEquations.js" type="text/javascript"></script>
+    <script src="js/intersectonTools/intersectionNode.js" type="text/javascript"></script> 
+    <script src="js/intersectonTools/lineEquation.js" type="text/javascript"></script>
+    <script src="js/intersectonTools/lineIntersection.js" type="text/javascript"></script>
+    <script src="js/intersectonTools/coordDictionary.js" type="text/javascript"></script>
+    <script src="js/intersectonTools/guideline.js" type="text/javascript"></script>
+    <script src="js/circleTools/circleDraw.js" type="text/javascript"></script>
+    <script src="js/circleTools/circleEquations.js" type="text/javascript"></script>
     <script src="js/grid.js" type="text/javascript"></script>
-    <script src="js/musical.js" type="text/javascript"></script>
+    <script src="js/musicalTools/musical.js" type="text/javascript"></script>
   	<script src="js/draw.js" type="text/javascript"></script>
   	  
   	<script>
