--- a/draw-intersections.html
+++ b/draw-intersections.html
@@ -62,6 +62,9 @@
     <script src="js/lineTools/guideline.js" type="text/javascript"></script>
     <script src="js/lineTools/grid.js" type="text/javascript"></script>
     
+    <!-- Path Tools -->
+    <script src="js/pathTools/pathClick.js" type="text/javascript"></script>
+
       <!--Circle Tools -->
     <script src="js/circleTools/circleDraw.js" type="text/javascript"></script>
     <script src="js/circleTools/circleEquations.js" type="text/javascript"></script>
