FEAT: add undoHistory.js file

--- a/draw-intersections.html
+++ b/draw-intersections.html
@@ -49,6 +49,9 @@
 
     <script src="js/objs.js" type="text/javascript"></script>
     
+    <!-- Undo History -->
+    <script src="js/undo/undoHistory.js" type="text/javascript"></script> 
+    
     <!--Window Tools -->
     <script src="js/windowTools/pan.js" type="text/javascript"></script> 
     <script src="js/windowTools/zoom.js" type="text/javascript"></script> 
