FEAT: improve appearence of layer palette

--- a/js/layers/layerPalette.html
+++ b/js/layers/layerPalette.html
@@ -17,7 +17,7 @@
    </ul>
     
    <footer class='clearfix'>
-       <a class='closeLayer' href=''><i class='small material-icons'>note_add</i></a>
+       <a id='newLayer' href=''><i class='small material-icons'>note_add</i></a>
        <button id='eraseLayer'><i class='small material-icons'>delete</i></button>
    </footer>
        
