--- a/draw-intersections.html
+++ b/draw-intersections.html
@@ -44,8 +44,7 @@
 		<svg id='nest' xmlns="http://www.w3.org/2000/svg"  data-scale='1'  data-top="0" data-left="0" data-width="1150" data-height="700" >
 			<g id='preview'></g>
             <g id='musicallines'></g>
-            <g id='guidecircles'></g>
-			<g id='guidelines'></g>
+			<g id='guides' class='selected'></g>
             <g id='drawinglayer'>
                 <g id='layer1'></g>
             </g>
