FEAT: Add guide class to guide layers and only draw intersections on guides

--- a/draw-intersections.html
+++ b/draw-intersections.html
@@ -44,10 +44,8 @@
 		<svg id='nest' xmlns="http://www.w3.org/2000/svg"  data-scale='1'  data-top="0" data-left="0" data-width="1150" data-height="700" >
 			<g id='preview'></g>
             <g id='musicallines'></g>
-			<g id='guides' class='selected'></g>
-            <g id='drawinglayer'>
-                <g id='layer1'></g>
-            </g>
+			<g id='guides' class='selected guide' data-stroke="#666666" data-stroke-width="1"></g>
+            <g id='drawinglayer' class='drawing' data-stroke="#000000" data-stroke-width="2"></g>
 			<g id='intersection_points'></g>
             
        <!--  <circle class="follower" r="20" cx="200" cy="200" data-identifier="C18" style="stroke-width:1; fill:red"></circle>-->
