FEAT: musical notes interpretted as tempered tuning

--- a/draw-intersections.html
+++ b/draw-intersections.html
@@ -29,6 +29,8 @@
                 <button id="draw-straight" data-mode="draw-straight" title="(d) draw - straight"></button>
                 <button id="draw-curved" data-mode="draw-curved" title="(d) draw - curved"></button>
                 <button id="musical" data-mode="musical" title="(m) musical line"></button>
+                <button id="play" data-mode="play" title="(p) play music"></button>
+                <span id='noteDisplay'></span>
          </div>
  	</nav>
 	
@@ -75,6 +77,7 @@
     <script src="js/circleTools/circleEquations.js" type="text/javascript"></script>
          
      <!--Musical Tools -->
+    <script src="js/musicalTools/findClosestNote.js" type="text/javascript"></script>
     <script src="js/musicalTools/musical.js" type="text/javascript"></script>
     
       <!--App  -->
