--- a/draw-intersections.html
+++ b/draw-intersections.html
@@ -43,10 +43,14 @@
 		
 		<svg id='nest' xmlns="http://www.w3.org/2000/svg"  data-scale='1'  data-top="0" data-left="0" data-width="1150" data-height="700" >
 			<g id='preview' class='top'></g>
-            <g id='musicallines' class='top'></g>
-			<g id='guides' class='selected guide top' data-stroke="#666666" data-stroke-width="1"></g>
-            <g id='drawinglayer' class='drawing top' data-stroke="#000000" data-stroke-width="2"></g>
-			<g id='intersection_points' class='top'></g>
+            <g id='workingLayers'>
+                <g id='layer1' class='layerGroup selected' data-index='1'>
+                    <g id='drawinglayer1' class='child drawing' data-stroke="#000000" data-stroke-width="2"></g>
+                    <g id='musicallines1' class='child musical'></g>
+                    <g id='guides1' class='child selected guide' data-stroke="#666666" data-stroke-width="1"></g>
+                    <g id='intersection_points1' class='child'></g>
+                </g>
+            </g>
             
        <!--  <circle class="follower" r="20" cx="200" cy="200" data-identifier="C18" style="stroke-width:1; fill:red"></circle>-->
 		</svg>
