FIX: add groups with native JavaScript not jQuery

--- a/draw-intersections.html
+++ b/draw-intersections.html
@@ -78,6 +78,7 @@
     <script src="js/pathTools/pathClick.js" type="text/javascript"></script>
     
      <!-- Layer Tools -->
+    <script src="js/layers/group.js" type="text/javascript"></script>
     <script src="js/layers/layerPalette.js" type="text/javascript"></script>
 
       <!--Circle Tools -->
