--- a/draw-intersections.html
+++ b/draw-intersections.html
@@ -45,7 +45,7 @@
                     <g id='drawinglayer1' class='child drawing' data-stroke="#000000" data-stroke-width="2"></g>
                     <g id='musicallines1' class='child musical'></g>
                     <g id='guides1' class='child selected guide' data-stroke="#666666" data-stroke-width="1"></g>
-                    <g id='intersection_points1' class='child'></g>
+                    <g id='intersection_points1' class='child intersections'></g>
                 </g>
             </g>
             
