FEAT: Added deleteLayer.js file and set up confirm box

--- a/draw-intersections.html
+++ b/draw-intersections.html
@@ -80,6 +80,7 @@
      <!-- Layer Tools -->
     <script src="js/layers/group.js" type="text/javascript"></script>
     <script src="js/layers/layerPalette.js" type="text/javascript"></script>
+    <script src="js/layers/deleteLayer.js" type="text/javascript"></script>
 
       <!--Circle Tools -->
     <script src="js/circleTools/circleDraw.js" type="text/javascript"></script>
