--- a/draw-intersections.html
+++ b/draw-intersections.html
@@ -81,6 +81,8 @@
     <script src="js/layers/group.js" type="text/javascript"></script>
     <script src="js/layers/layerPalette.js" type="text/javascript"></script>
     <script src="js/layers/deleteLayer.js" type="text/javascript"></script>
+    <script src="js/layers/AddLayer.js" type="text/javascript"></script>
+
 
       <!--Circle Tools -->
     <script src="js/circleTools/circleDraw.js" type="text/javascript"></script>
